test/integration/bad/tuples/bad-index5.stan
transformed data {
  tuple(real, real) pair = (3.14, 34.2);
  real x = pair[1];
}
